# transformers_dot_run

./: README.md  pyproject.toml
chap7_fine_tune/: __init__.py  afqmc.py  bert_for_pairwise_cls.py  data_loader.py  epoch.py  test.py  train.py
chap9_seq_tagging/: __init__.py  __main__.py  bert_for_ner.py  epoch.py  people_daily.py  test.py  train.py
dataset/: afqmc.py
utils/: random.py
