[project]
name = "transformers-dot-run"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hf-xet>=1.1.5",
    "jsonlines>=4.0.0",
    "loguru>=0.7.3",
    "seqeval>=1.2.2",
    "torch>=2.7.1",
    "transformers>=4.53.1",
]


[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120
